fix: SkillFilter colours & invisible option when selected

--- a/frontend/src/components/home/project/ReactSelectOverrides.css
+++ b/frontend/src/components/home/project/ReactSelectOverrides.css
@@ -7,6 +7,11 @@
     cursor: pointer;
 }
 
+.skills-filter__option {
+    box-shadow: inset  4px 0px 0px 0px var(--primary-colour);
+    border-color: var(--skill-selected-colour);
+}
+
 /* 
     PREVIOUSLY USED CLASSES FOR FUTURE REFERENCE 
 */
