--- a/frontend/src/components/home/project/SkillFilter.module.css
+++ b/frontend/src/components/home/project/SkillFilter.module.css
@@ -6,6 +6,14 @@
     margin-bottom: 0.5em;
 }
 
+#skill-filter-container > div {
+    border-color: var(--skill-filter-border-colour);
+}
+
+.skill-filter--is-focused {
+    border-color: var(--skill-selected-colour) !important;
+}
+
 #skill-filter-container svg > path {
     fill: var(--filter-colour);
 }
